# graphcodemap

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: COMPARISON.md  DESIGN.md  RESEARCH.md
evals/: RESULTS.md  locbench-swe-lite-pilot.json  locbench.py  reach-flask.json  reach-gin.json  reachbench-1784475890.json  reachbench-1784479263.json  reachbench-1784494746.json  reachbench.py  report-1784373922.json  report-1784376429.json  report-1784390721-redis.json  scalebench-1784518053.json  scalebench-real-1784555574.json  scalebench.py  swe-lite-pilot.json  tasks-flask.json  tasks-redis.json  tasks.json
src/codegraph/: __init__.py  cli.py  community.py  dataflow.py  db.py  indexer.py  languages.py  log.py  mcp_server.py  query.py  rank.py  render.py  taint_rules.py  util.py  viz.py  watcher.py
src/codegraph/eval/: __init__.py  agent.py  tools.py
src/codegraph/extract/: __init__.py  base.py  ccpp.py  clojure.py  csharp.py  docs.py  generic.py  go.py  java.py  kotlin.py  lua.py  php.py  python.py  ruby.py  rust.py  (+4 more)
testcodes/: code1.py  code10.kt  code11.c  code12.sql  code14.php  code15.asm  code2.rs  code3.go  code4.html  code5.cpp  code6.cs  code7.java  code8.js  code9.ts
tests/: conftest.py  test_clojure.py  test_communities.py  test_concurrency.py  test_cycles.py  test_dataflow.py  test_dataflow_fieldsens.py  test_dataflow_langs.py  test_edge_idempotency.py  test_eval.py  test_freshness.py  test_generic_langs.py  test_graph_tools.py  test_host_api.py  test_indexer.py  test_l1.py  test_l1_clangd.py  test_l1_extra.py  test_l1_go.py  test_l1_rust.py  test_l3.py  test_more_langs.py  test_observability.py  test_parallel_index.py  test_partial_index.py  test_ruby_lua_swift.py  test_rust_go.py  test_search_ranking.py  test_taint.py  test_viz.py  test_wal_checkpoint.py  test_watcher.py  test_watcher_freshness.py  test_web.py
(+19 files in other folders)
